# High-Performance-Computing

./: README.md
exercise_1/: .gitignore  README.md  graph.py  runner.py
exercise_1/c_source/: CMakeLists.txt
exercise_1/c_source/outputs/: order_0.csv  order_1.csv
exercise_1/c_source/src/: main.c  matrix.c  matrix.h
exercise_1/fortran_source/: CMakeLists.txt
exercise_1/fortran_source/outputs/: order_0.csv  order_1.csv
exercise_1/fortran_source/src/: matrix.f90  product.f90
exercise_2/: README.md
exercise_2/reports/: output.txt  output_base.txt
exercise_2/src/: laplace.cxx  laplace_new.cpp
exercise_4/: README.md  runner.py
exercise_4/src/: laplace.cpp  laplace_omp.cpp
